# OpenGL-3D-Scene

./: CMakeLists.txt  README.md
Backups/pyramid3d/: pyramid3d.vert
res/shaders/default/: default.frag  default.vert
res/shaders/pyramid3d/: pyramid3d.frag
res/shaders/triangle/: triangle.frag  triangle.vert
res/textures/: Make Image Specular (BLACK & WHITE).txt
src/: main.cpp  pch.hpp
src/Application/: Application.cpp  Application.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Graphics/Buffer/BufferLayout/: BufferElement.hpp
src/Graphics/Buffer/Vertex/: Vertex.hpp
src/Graphics/Buffer/VertexArray/: VertexArray.cpp
src/Graphics/Buffer/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.hpp
src/Graphics/Shader/: Shader.cpp  Shader.hpp
src/Graphics/Texture/: Texture.cpp
src/Lights/: Light.hpp  PointLight.hpp
src/Model/: Material.hpp  Mesh.hpp  Model.cpp  Model.hpp  OBJLoader.hpp
src/Primitives/: Primitives.hpp
src/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/Scenes/: Scene.hpp
src/Scenes/MainMenuScene/: MainMenuScene.cpp  MainMenuScene.hpp
src/Scenes/Models3DScene/: Models3DScene.cpp  Models3DScene.hpp
src/Scenes/StaticTriangleScene/: StaticTriangleScene.cpp  StaticTriangleScene.hpp
src/UI/: ImGuiRenderer.cpp
src/Utility/: FileUtils.hpp  OpenGLUtils.hpp
src/Window/: Window.cpp  Window.hpp
